--- a/P1-Prime Number Test/P1-Prime Number Test/P1-Prime Number Test.vcxproj
+++ b/P1-Prime Number Test/P1-Prime Number Test/P1-Prime Number Test.vcxproj
@@ -135,12 +135,15 @@
     <ClCompile Include="IETThread.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathUtils.cpp" />
+    <ClCompile Include="PrimeChecker.cpp" />
     <ClCompile Include="StringUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseRunner.h" />
     <ClInclude Include="IETThread.h" />
+    <ClInclude Include="IWorkerAction.h" />
     <ClInclude Include="MathUtils.h" />
+    <ClInclude Include="PrimeChecker.h" />
     <ClInclude Include="StringUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
